# quote-bot

./: CMakeLists.txt  main.cpp
